--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true /* Generates corresponding '.d.ts' file. */,
 
     "outDir": "dist" /* Redirect output structure to the directory. */,
-    "removeComments": false /* Do not emit comments to output. */,
+    "removeComments": true /* Do not emit comments to output. */,
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
@@ -54,5 +54,5 @@
     // "types": []
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "jest.config.ts", "**/*.(test|spec|test-data).ts"]
+  "exclude": ["src/**/*.test.ts"]
 }
