--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,5 +54,5 @@
     // "types": []
   },
   "include": ["src/**/*"],
-  "exclude": ["src/**/*.test.ts"]
+  "exclude": ["src/**/*.(test|spec).ts"]
 }
