chore: push after release

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,7 @@
 {
   "git": {
-    "commitMessage": "chore: release ${version}"
+    "commitMessage": "chore: release ${version}",
+    "push": true
   },
   "github": {
     "release": true
