--- a/.github/workflows/buildPR.yaml
+++ b/.github/workflows/buildPR.yaml
@@ -4,13 +4,18 @@ on:
     branches:
       - main
 jobs:
-  buildTest:
+  testAndBuild:
+    name: test and build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [14, 16, 18]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '14'
-      - run: yarn
-      - run: yarn test
-      - run: yarn build
+          node-version: ${{ matrix.node }}
+      - run: npm install -g pnpm
+      - run: pnpm install
+      - run: pnpm test
+      - run: pnpm build
